tests/neg-with-compiler/quote-run-in-macro-3/quoted_2.scala
import Macros._
object Test {
  def main(args: Array[String]): Unit = {
    println(foo(1  + 3)) // error
  }
}
